--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ sidebar:
   nav: "topic_categories"
 ---
 
-<h1>Linux System Administrator, Python Enthusiast, and Cloud engineer</h1>
+<h1>Linux System Administrator, Python Enthusiast, and Cloud Engineer</h1>
 
 <p>
 Ask me anything and I'll see what I can do.
